--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <div class="content">
                                 <div class="inner">
                                     <span class="subtitle">Welcome to my world</span>
-                                    <h1 class="title">Hi, I’m <span>Sarangan</span><br>
+                                    <h1 class="title">Hi, I’m <span>Best Friends</span><br>
                                         <span class="header-caption" id="page-top">
                                             <!-- type headline start-->
                                             <span class="cd-headline clip is-full-width">
