--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <div class="order-2 order-lg-1 col-lg-7 mt_md--50 mt_sm--50 mt_lg--30">
                             <div class="content">
                                 <div class="inner">
-                                    <span class="subtitle">Welcome to my world</span>
+                                    <span class="subtitle">Welcome to my Team</span>
                                     <h1 class="title">Hi, I’m <span>Best Friends</span><br>
                                         <span class="header-caption" id="page-top">
                                             <!-- type headline start-->
